--- a/requirements.txt
+++ b/requirements.txt
@@ -116,6 +116,7 @@ sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
 streamlit==1.42.2
+streamlit_folium
 sympy==1.13.1
 tenacity==9.0.0
 terminado==0.18.1
